fixed input validation; implemented pasting functionality of uvci lists; implemented button "Generate new report" at the end of a report generation; added navigation link; commented out non-ready reports; updated some translations; implemented handling if report is only partially complete

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -198,6 +198,7 @@
     "reports.aggregation.header": "Sie möchten prüfen, ob die Zahlen zur Zertifikatsausstellung in Ihrem Kanton auf einen allfälligen Missbrauchsfall hinweisen? Erstellen Sie dazu einen Aggregationsreport.",
     "reports.detail.header": "Sie möchten einen konkreten Verdachtsfall belegen oder widerlegen, indem Sie die einzelnen Aktionen einer Ausstellerin/eines Ausstellers analysieren? Erstellen Sie dazu einen Detailreport.",
     "reports.generate": "Report generieren",
+    "reports.generate.new": "Neuen Report generieren",
     "reports.generation.info": "Ihre Abfrage wird ausgeführt und der Report erstellt. Bei grossen Datenmengen, kann dies mehrere Minuten in Anspruch nehmen. Wir bitten Sie um etwas Geduld. Achtung: Bitte schliessen Sie dieses Fenster während dieser Zeit nicht und machen Sie keinen Reload, da das Erstellen des Reports dadurch abgebrochen wird.",
     "reports.generation.success": "Vielen Dank für Ihre Geduld. Der Report ist nun fertiggestellt und steht Ihnen zum Download zur Verfügung.",
     "reports.generation.success.title": "Ihr Report wurde generiert",
@@ -205,6 +206,7 @@
     "reports.generation.title": "Ihr Report wird generiert",
     "reports.generation.too-big": "Die Anzahl Datensätze, die den Suchkriterien entsprechen ist zu gross und die Abfrage kann nicht abgeschlossen werden.\nBitte schränken Sie die Suche weiter ein.",
     "reports.generation.too-big.title": "Fehler",
+    "reports.link": "Report generieren",
     "reports.param-help.description": "Falls Sie Fragen zu den Parametern haben, wird hier jeder Parameter erklärt.",
     "reports.param-help.download": "Download Hilfestellung",
     "reports.param-help.title": "Hilfestellung Parameter",
