--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -198,6 +198,7 @@
     "reports.aggregation.header": "Desidera ottenere una panoramica generale dei certificati emessi in Svizzera sotto forma di analisi statistica? Crei un rapporto statistico.",
     "reports.detail.header": "Want to prove or refute a concrete case of suspicion by analysing the individual actions of an issuer? Then create an detailed report.",
     "reports.generate": "Generate report",
+    "reports.generate.new": "Generate new report",
     "reports.generation.info": "Your query is being processed and the report created. If there are large volumes of data involved this can take several minutes. We ask you to be patient.\nImportant: Please do not close this window while the report is being created and do not reload, as this will cancel the creation of the report.",
     "reports.generation.success": "Many thanks for your patience. The report has now been generated and is ready for you to download.",
     "reports.generation.success.title": "Report successfully generated",
@@ -205,6 +206,7 @@
     "reports.generation.title": "Your report is being generated",
     "reports.generation.too-big": "The number of data sets matching the search criteria is too big and the query cannot be processed to completion. Please limit your search further.",
     "reports.generation.too-big.title": "Error",
+    "reports.link": "Generate report",
     "reports.param-help.description": "If you have questions on the parameters you will find an explanation of each parameter here.",
     "reports.param-help.download": "Download help",
     "reports.param-help.title": "Help with parameters",
