--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -198,6 +198,7 @@
     "reports.aggregation.header": "Vous souhaitez vérifier si le nombre de certificats établis dans votre canton révèle d’éventuels abus ? Rédigez un rapport d’agrégation.",
     "reports.detail.header": "Vous souhaitez confirmer ou infirmer un soupçon concret en analysant les activités d’un émetteur précis ? Rédigez un rapport de détail.",
     "reports.generate": "Générer le rapport",
+    "reports.generate.new": "",
     "reports.generation.info": "Votre requête est en cours d’exécution et le rapport est généré. Si la quantité de données est importante, cela peut prendre plusieurs minutes. Nous vous prions de faire preuve de patience. Attention : veuillez ne pas fermer cette fenêtre pendant le processus de création et ne pas faire de nouveau téléchargement, car cela interromprait la création du rapport.",
     "reports.generation.success": "Merci de votre patience. Le rapport est maintenant terminé et peut être téléchargé.",
     "reports.generation.success.title": "Génération des données réussie",
@@ -205,6 +206,7 @@
     "reports.generation.title": "Génération du rapport en cours",
     "reports.generation.too-big": "Le nombre de données correspondant aux critères de recherche est trop important, et la requête ne peut pas être terminée. Veuillez restreindre davantage votre recherche.",
     "reports.generation.too-big.title": "Erreur",
+    "reports.link": "Générer le rapport",
     "reports.param-help.description": "Si vous avez des questions concernant les paramètres, ils sont tous expliqués ici.",
     "reports.param-help.download": "Télécharger l’aide",
     "reports.param-help.title": "Aide sur les paramètres",
