--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -198,6 +198,7 @@
     "reports.aggregation.header": "Desidera verificare se le cifre relative ai certificati emessi nel Suo Cantone sono indice di un possibile caso di abuso? Crei un rapporto di aggregazione.",
     "reports.detail.header": "Desidera confermare o confutare un caso concreto di sospetto abuso analizzando le singole azioni di un dato emittente? Crei un rapporto di dettaglio.",
     "reports.generate": "Genera il rapporto",
+    "reports.generate.new": "",
     "reports.generation.info": "La richiesta è in fase di elaborazione e il rapporto verrà generato a breve. In caso di grandi quantità di dati possono essere necessari diversi minuti. Si prega di attendere.\nAttenzione: non chiudere questa finestra durante il processo di elaborazione e non ricaricare la pagina per non annullare la generazione del rapporto.",
     "reports.generation.success": "Grazie dell’attesa. Il rapporto è stato ultimato ed è pronto per il download.",
     "reports.generation.success.title": "Creazione avvenuta con successo",
@@ -205,6 +206,7 @@
     "reports.generation.title": "Generazione del rapporto in corso",
     "reports.generation.too-big": "Il numero di risultati corrispondenti ai criteri di ricerca è troppo grande e la ricerca non può essere completata. Si prega di restringere la ricerca.",
     "reports.generation.too-big.title": "Errore",
+    "reports.link": "Genera il rapporto",
     "reports.param-help.description": "In caso di domande sui parametri, qui sono spiegati tutti.",
     "reports.param-help.download": "Scarica l’aiuto",
     "reports.param-help.title": "Aiuto sui parametri",
