display details message whenever details are available.
Signed-off-by: mofobo <mohammed.fonsecaboukhalat@bit.admin.ch>

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -164,6 +164,10 @@
     "otp.link": "One-Time-Password generieren",
     "otp.title": "Neues One-Time-Password generieren",
     "report.link": "Report",
+    "report.response.details.code.1000": "Bitte beachten Sie, dass nicht für alle Suchparameter Daten gefunden oder ausgegeben werden konnten. Für detailliertere Hinweise prüfen Sie den erstellten Report.",
+    "report.response.details.code.1001": "Dem Benutzer ist es nicht gestattet, auf alle oder einen Teil der angeforderten uvcis-Informationen zuzugreifen.",
+    "report.response.details.code.1002": "Die angeforderten uvcis konnten ganz oder teilweise nicht gefunden werden.",
+    "report.response.details.code.1003": "Alle oder ein Teil der angeforderten uvcis wurden aus einem App-Export generiert.",
     "reports.a10.description.long": "<strong>Welche Aussteller/innen haben welche Anzahl eines spezifischen Zertifikatstyps in einem definierten Zeitraum ausgestellt? </strong></br></br>Dieser Report liefert Ihnen, nach Auswahl eines Zertifikatstyps, eine nach Aussteller/in gegliederte Liste mit der Summe der ausgestellten Zertifikatstypen.",
     "reports.a10.description.short": "Übersicht aller Aussteller/innen eines bestimmten Zertifikatstyps inkl. Ausstellkanal für einen definierten Zeitraum.",
     "reports.a11.description.long": "<strong>Welche Zertifikate sind während eines bestimmten Zeitraums revoziert worden?</strong></br></br>Dieser Report liefert Ihnen eine Liste aller revozierten Zertifikate, die während des angefragten Zeitraums im ausgewählten Kanton revoziert worden sind. Bitte beachten Sie, dass der Revokationszeitraum nicht dem Ausstellungszeitraum der Zertifikate entspricht.",
@@ -200,7 +204,7 @@
     "reports.generate": "Report generieren",
     "reports.generate.new": "Neuen Report generieren",
     "reports.generation.info": "Ihre Abfrage wird ausgeführt und der Report erstellt. Bei grossen Datenmengen, kann dies mehrere Minuten in Anspruch nehmen. Wir bitten Sie um etwas Geduld. Achtung: Bitte schliessen Sie dieses Fenster während dieser Zeit nicht und machen Sie keinen Reload, da das Erstellen des Reports dadurch abgebrochen wird.",
-    "reports.generation.success": "Vielen Dank für Ihre Geduld. Der Report ist nun fertiggestellt und steht Ihnen zum Download zur Verfügung.",
+    "reports.generation.success": "Vielen Dank für Ihre Geduld. Der Report wurde fertiggestellt.",
     "reports.generation.success.title": "Ihr Report wurde generiert",
     "reports.generation.success.warning": "Bitte beachten Sie, dass nicht für alle Suchparameter Daten gefunden oder ausgegeben werden konnten. Für detailliertere Hinweise prüfen Sie den erstellten Report.",
     "reports.generation.title": "Ihr Report wird generiert",
