--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -164,6 +164,10 @@
     "otp.link": "Générer un One-Time-Password",
     "otp.title": "Générer un nouvel One-Time-Password",
     "report.link": "Rapport",
+    "report.response.details.code.1000": "Attention : les données n’ont pas pu être trouvées ou générées pour tous les paramètres de recherche. Pour de plus amples informations, veuillez consulter le rapport établi.",
+    "report.response.details.code.1001": "L'utilisateur n'est pas autorisé à accéder à tout ou partie des informations uvcis demandées.",
+    "report.response.details.code.1002": "Tout ou partie des uvcis demandé n'a pu être trouvé.",
+    "report.response.details.code.1003": "Tout ou partie des uvcis demandés ont été générés à partir d'une exportation d'applications.",
     "reports.a10.description.long": "<strong>Quels émetteurs ont délivré quelle quantité d’un type de certificat spécifique au cours d’une période donnée?</strong></br></br>Après sélection d’un type de certificat, ce rapport vous fournit une liste classée par émetteur avec la somme des types de certificats délivrés.",
     "reports.a10.description.short": "Aperçu de tous les émetteurs d’un certain type de certificat, y compris le canal d’émission pour une période donnée.",
     "reports.a11.description.long": "<strong>Quels certificats ont été révoqués pendant une période donnée?</strong></br></br>Ce rapport vous fournit une liste de tous les certificats révoqués pendant la période demandée dans le canton sélectionné. Veuillez noter que la période de révocation ne correspond pas à la période d’émission des certificats.",
@@ -200,7 +204,7 @@
     "reports.generate": "Générer le rapport",
     "reports.generate.new": "",
     "reports.generation.info": "Votre requête est en cours d’exécution et le rapport est généré. Si la quantité de données est importante, cela peut prendre plusieurs minutes. Nous vous prions de faire preuve de patience. Attention : veuillez ne pas fermer cette fenêtre pendant le processus de création et ne pas faire de nouveau téléchargement, car cela interromprait la création du rapport.",
-    "reports.generation.success": "Merci de votre patience. Le rapport est maintenant terminé et peut être téléchargé.",
+    "reports.generation.success": "Merci de votre patience. Le rapport est maintenant terminé.",
     "reports.generation.success.title": "Génération des données réussie",
     "reports.generation.success.warning": "Attention : les données n’ont pas pu être trouvées ou générées pour tous les paramètres de recherche. Pour de plus amples informations, veuillez consulter le rapport établi.",
     "reports.generation.title": "Génération du rapport en cours",
