--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -164,6 +164,10 @@
     "otp.link": "Generate One-Time-Password",
     "otp.title": "Generate new One-Time-Password",
     "report.link": "Report",
+    "report.response.details.code.1000": "Please note that data could not be found or displayed for all search parameters. For more detailed information, check the generated report.",
+    "report.response.details.code.1001": "User is not allowed to access all or part of the requested uvcis informations.",
+    "report.response.details.code.1002": "All or part of the requested uvcis couldn't be found.",
+    "report.response.details.code.1003": "All or part of the requested uvcis have been generated from an app export.",
     "reports.a10.description.long": "<strong>What issuers issued what number of a specific certificate type in a defined period?</strong></br></br>After you select a certificate type, this report provides you with a list, broken down by issuer, of the total certificate types issued.",
     "reports.a10.description.short": "Overview of all issuers of a specific certificate type, including issuing channel, for a defined period.",
     "reports.a11.description.long": "<strong>Which certificates were revoked in a certain period? </strong></br></br>This report provides you with a list of all certificates revoked in the selected canton in the defined period. Please note that the revocation period does not match the certificate issue period.",
@@ -200,7 +204,7 @@
     "reports.generate": "Generate report",
     "reports.generate.new": "Generate new report",
     "reports.generation.info": "Your query is being processed and the report created. If there are large volumes of data involved this can take several minutes. We ask you to be patient.\nImportant: Please do not close this window while the report is being created and do not reload, as this will cancel the creation of the report.",
-    "reports.generation.success": "Many thanks for your patience. The report has now been generated and is ready for you to download.",
+    "reports.generation.success": "Many thanks for your patience. The report has now been generated.",
     "reports.generation.success.title": "Report successfully generated",
     "reports.generation.success.warning": "Please note that data could not be found or displayed for all search parameters. For more detailed information, check the generated report.",
     "reports.generation.title": "Your report is being generated",
