--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -172,7 +172,7 @@
     "reports.a12.description.long": "<strong>Sono necessarie ulteriori informazioni su certificati specifici di cui si conosce il codice di trasferimento?</strong></br></br>Dopo che sono stati immessi i codici di trasferimento, questo rapporto fornisce un elenco di tutti i certificati corrispondenti ai codici selezionati. Si segnala che per il periodo dal 13.11.2021 al 21.02.2022 sono disponibili solo dati ricostruiti.",
     "reports.a12.description.short": "",
     "reports.a12.title": "A12",
-    "reports.a2.description.long": "<strong>Chi ha rilasciato il certificato in questione, quando e attraverso quale canale? Di che tipo di certificato si tratta?</strong></br></br>Achtung: folgender Text noch nicht definitiv, muss noch überprüft werden!\nLungo: \nDopo che sono state immesse l'UVCI, il rapporto fornisce informazioni sull'emittente, la data e il canale di emissione nonché il tipo di certificato oggetto della ricerca. Non vengono fornite informazioni sulla persona per la quale è stato rilasciato il certificato.",
+    "reports.a2.description.long": "<strong>Chi ha rilasciato il certificato in questione, quando e attraverso quale canale? Di che tipo di certificato si tratta?</strong></br></br>Achtung: folgender Text noch nicht definitiv, muss noch überprüft werden!\nLungo: \nDopo che è stato immesso l’UVCI, questo rapporto fornisce informazioni riguardanti l’emittente, la data e il canale di emissione nonché il tipo di certificato oggetto della ricerca. Non vengono fornite informazioni sulla persona per la quale è stato rilasciato il certificato.",
     "reports.a2.description.short": "Informazioni dettagliate (canale di emissione, emittente, data del rilascio e tipo di certificato) su uno specifico identificativo del certificato (UVCI). Non vengono fornite informazioni sulla persona per la quale è stato rilasciato il certificato.",
     "reports.a2.reset-input": "Annulla l’immissione",
     "reports.a2.title": "A2",
@@ -198,7 +198,7 @@
     "reports.aggregation.header": "Desidera verificare se le cifre relative ai certificati emessi nel Suo Cantone sono indice di un possibile caso di abuso? Crei un rapporto di aggregazione.",
     "reports.detail.header": "Desidera confermare o confutare un caso concreto di sospetto abuso analizzando le singole azioni di un dato emittente? Crei un rapporto di dettaglio.",
     "reports.generate": "Genera il rapporto",
-    "reports.generate.new": "",
+    "reports.generate.new": "Generare un nuovo rapporto",
     "reports.generation.info": "La richiesta è in fase di elaborazione e il rapporto verrà generato a breve. In caso di grandi quantità di dati possono essere necessari diversi minuti. Si prega di attendere.\nAttenzione: non chiudere questa finestra durante il processo di elaborazione e non ricaricare la pagina per non annullare la generazione del rapporto.",
     "reports.generation.success": "Grazie dell’attesa. Il rapporto è stato ultimato.",
     "reports.generation.success.title": "Creazione avvenuta con successo",
