--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -118,6 +118,35 @@
     "dashboard.upload.action": "Generate multiple certificates",
     "dashboard.upload.description": "Here you can generate multiple certificates.",
     "dashboard.upload.title": "Generate multiple certificates",
+    "dataroom.ag": "Argovia",
+    "dataroom.ai": "Appenzell Inner-Rhodes",
+    "dataroom.ar": "Appenzell Outer-Rhodes",
+    "dataroom.armee": "Armee",
+    "dataroom.be": "Berne",
+    "dataroom.bl": "Basle-Country",
+    "dataroom.bs": "Basle-City",
+    "dataroom.bv-intern": "BV-Intern",
+    "dataroom.fr": "Friburg",
+    "dataroom.ge": "Geneva",
+    "dataroom.ggg": "GGG",
+    "dataroom.gl": "Glaris",
+    "dataroom.gr": "Grisons",
+    "dataroom.ju": "Jura",
+    "dataroom.lu": "Lucerne",
+    "dataroom.ne": "Neuchâtel",
+    "dataroom.nw": "Nidwald",
+    "dataroom.ow": "Obwald",
+    "dataroom.sg": "St Gall",
+    "dataroom.sh": "Schaffhouse",
+    "dataroom.so": "Soleure",
+    "dataroom.sz": "Schwyz",
+    "dataroom.tg": "Thurgovia",
+    "dataroom.ti": "Tessin",
+    "dataroom.ur": "Uri",
+    "dataroom.vd": "Vaud",
+    "dataroom.vs": "Wallis",
+    "dataroom.zg": "Zoug",
+    "dataroom.zh": "Zurich",
     "footer.built.prefix": "Developed with",
     "footer.built.suffix": "built",
     "footer.legal": "Terms and conditions",
@@ -174,7 +203,6 @@
     "reports.a12.title": "A12",
     "reports.a2.description.long": "<strong>Who issued this specific certificate, when did they issue it, via what issuing channel, and what type of certificate was it?</strong></br></br>After entry of the UVCI this report provides you with information on the issuer, the time of issue, the issuing channel and the type of certificate being searched for. Information on the person for whom the certificate was issued is not available.",
     "reports.a2.description.short": "Detailed information (issuing channel, issuer, time and type of certificate) for a specific certificate UVCI. Information on the person for whom the certificate was issued is not available.",
-    "reports.a2.reset-input": "Reset entry",
     "reports.a2.title": "A2",
     "reports.a3.description.long": "<strong>How many certificates of what type did a specific issuer issue via what channels in a defined period?</strong></br></br>This report provides you with a list, broken down by issuer, of the total certificate types issued and issuing channels.",
     "reports.a3.description.short": "Number and type of all certificates issued by a specific issuer or an organisational unit.",
@@ -186,8 +214,22 @@
     "reports.a5.description.short": "Number and type of all certificates issued by a specific issuer or an organisational unit.",
     "reports.a6.description.long": "<strong>After the relevant units (organisation/issuer) have been selected and searched for, this report provides you with a list, broken down by issuer, of the total certificate types and issuing channels.</strong></br></br>After the relevant units (organisation/issuer) have been selected and searched for, this report provides you with a list, broken down by issuer, of the certificates issued, including details such as certificate type, issuing channel, time of issue and UVCI of each certificate.",
     "reports.a6.description.short": "Detailed information on all certificates issued by a specific issuer or organisational unit.",
+    "reports.a7.cert-type.a": "Recovery certificates (antibody) – issue period in Switzerland: 16.11.2021 to 16.02.2022",
+    "reports.a7.cert-type.me": "Exemption certificates – issue period in Switzerland: 10.01.2022 to 16.02.2022",
+    "reports.a7.cert-type.r": "Recovery certificates (PCR) – issue period in Switzerland: as of 07.06.2021",
+    "reports.a7.cert-type.rr": "Recovery certificates (RAT CH) – issue period in Switzerland: 24.01.2022 to 16.02.2022",
+    "reports.a7.cert-type.rreu": "Recovery certificates (RAT EU) – issue period in Switzerland: as of 02.05.2022",
+    "reports.a7.cert-type.t": "Test certificates – issue period in Switzerland: as of 07.06.2021",
+    "reports.a7.cert-type.v": "Vaccination certificates – issue period in Switzerland: as of 07.06.2021",
+    "reports.a7.cert-type.vt": "Tourist certificates (WHO vaccine) – issue period in Switzerland: 30.11.2021 to 16.02.2022",
+    "reports.a7.ch-certs": "Swiss certificates:",
     "reports.a7.description.long": "<strong>What issuer issued what number of a specific certificate type in a defined period?</strong></br></br>After you select a certificate type this report provides you with a list of issuers and the number of certificates of this type issued in each case.",
     "reports.a7.description.short": "Overview of all issuers of a specific certificate type, including issuing channel, for a defined period.",
+    "reports.a7.eu-compatible-certs": "EU-compatible certificates",
+    "reports.a7.period-text": "Please select a start and end date for the issue period for the report:",
+    "reports.a7.select-all-cert-types": "Select all certificate types",
+    "reports.a7.select-cert-types": "Please choose the certificate type(s) for which you want to generate the report:",
+    "reports.a7.selected-dataroom": "Canton/area selected:",
     "reports.a7.title": "A7 / A10",
     "reports.a8.description.long": "<strong>How many certificates of the various certificate types were issued per week (max. last 3 months) via which channels?</strong></br></br>This report provides you with a weekly list of certificate types and the number of each per issuing channel (one worksheet per week). The second to nth worksheet also shows the difference to the previous week.",
     "reports.a8.description.short": "Weekly number of certificates of each type, broken down by issuing channel.",
@@ -210,6 +252,7 @@
     "reports.param-help.description": "If you have questions on the parameters you will find an explanation of each parameter here.",
     "reports.param-help.download": "Download help",
     "reports.param-help.title": "Help with parameters",
+    "reports.reset-input": "Reset entry",
     "reports.statistic.header": "Want a statistical analysis giving you a general overview of the issue of certificates in Switzerland? Then create a statistical report.",
     "reports.uvci.format": "Format: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx",
     "reports.uvci.format.error": "The UVCI must be in the following format: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx.",
