--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -118,6 +118,35 @@
     "dashboard.upload.action": "Générer plusieurs certificats",
     "dashboard.upload.description": "Vous pouvez générer ici plusieurs certificats.",
     "dashboard.upload.title": "Générer plusieurs certificats",
+    "dataroom.ag": "Argovie",
+    "dataroom.ai": "Appenzell Rhodes-Intérieures",
+    "dataroom.ar": "Appenzell Rhodes-Extérieures",
+    "dataroom.armee": "Armee",
+    "dataroom.be": "Berne",
+    "dataroom.bl": "Bâle-Campagne",
+    "dataroom.bs": "Bâle-Ville",
+    "dataroom.bv-intern": "BV-Intern",
+    "dataroom.fr": "Fribourg",
+    "dataroom.ge": "Genève",
+    "dataroom.ggg": "GGG",
+    "dataroom.gl": "Glaris",
+    "dataroom.gr": "Grisons",
+    "dataroom.ju": "Jura",
+    "dataroom.lu": "Lucerne",
+    "dataroom.ne": "Neuchâtel",
+    "dataroom.nw": "Nidwald",
+    "dataroom.ow": "Obwald",
+    "dataroom.sg": "Saint-Gall",
+    "dataroom.sh": "Schaffhouse",
+    "dataroom.so": "Soleure",
+    "dataroom.sz": "Schwyz",
+    "dataroom.tg": "Thurgovie",
+    "dataroom.ti": "Tessin",
+    "dataroom.ur": "Uri",
+    "dataroom.vd": "Vaud",
+    "dataroom.vs": "Valais",
+    "dataroom.zg": "Zoug",
+    "dataroom.zh": "Zurich",
     "footer.built.prefix": "Développé avec",
     "footer.built.suffix": "construit",
     "footer.legal": "Conditions d'utilisation",
@@ -174,7 +203,6 @@
     "reports.a12.title": "A12",
     "reports.a2.description.long": "<strong>Qui a délivré ce certificat spécifique, quand et par quel canal d’émission, et de quel type de certificat s’agissait-il?</strong></br></br>Après saisie de l'UVCI, ce rapport vous fournit des informations sur l’émetteur, la date et le canal d’émission ainsi que le type de certificat recherché. Les informations relatives à la personne pour laquelle le certificat a été délivré ne sont pas disponibles.",
     "reports.a2.description.short": "Informations détaillées (canal d’émission, émetteur, date et type de certificat) sur une UVCI de certificat spécifique. Les informations relatives à la personne pour laquelle le certificat a été délivré ne sont pas disponibles.",
-    "reports.a2.reset-input": "Rétablir la saisie",
     "reports.a2.title": "A2",
     "reports.a3.description.long": "<strong>Combien de certificats de quel type un émetteur spécifique a-t-il délivrés dans une période donnée et par quels canaux?</strong></br></br>Ce rapport vous fournit une liste classée par émetteur avec la somme des types de certificats délivrés et des canaux d’émission.",
     "reports.a3.description.short": "Nombre et type de tous les certificats délivrés par un émetteur spécifique ou une unité organisationnelle (unit).",
@@ -186,8 +214,22 @@
     "reports.a5.description.short": "Nombre et type de tous les certificats délivrés par un émetteur spécifique ou une unité organisationnelle (unit).",
     "reports.a6.description.long": "<strong>Quels certificats (UVCI, type, date, canal) chaque émetteur d’une unité a-t-il délivrés au cours d’une période donnée?</strong></br></br>Après sélection et recherche des unités correspondantes (organisation/émetteur), ce rapport vous fournit une liste structurée par émetteur avec les certificats délivrés par émetteur, y compris des détails tels que le type de certificat, le canal d’émission, la date d’émission et l’UVCI par certificat.",
     "reports.a6.description.short": "Informations détaillées sur tous les certificats délivrés par un émetteur ou une unité organisationnelle (unit) spécifique.",
+    "reports.a7.cert-type.a": "Certificats de guérison (anticorps) – Émission en Suisse : du 16.11.2021 au 16.02.2022",
+    "reports.a7.cert-type.me": "Certificats de dérogation – Émission en Suisse : du 10.01.2022 au 16.02.2022",
+    "reports.a7.cert-type.r": "Certificats de guérison (PCR) – Émission en Suisse : à partir du 07.06.2021",
+    "reports.a7.cert-type.rr": "Certificats de guérison (RAT CH) – Émission en Suisse : du 24.01.2022 au 16.02.2022",
+    "reports.a7.cert-type.rreu": "Certificats de guérison (RAT UE) – Émission en Suisse : à partir du 02.05.2022",
+    "reports.a7.cert-type.t": "Certificats de test – Émission en Suisse : à partir du 07.06.2021",
+    "reports.a7.cert-type.v": "Certificats de vaccination – Émission en Suisse : à partir du 07.06.2021",
+    "reports.a7.cert-type.vt": "Certificats pour touristes (vaccins OMS) – Émission en Suisse : du 30.11.2021 au 16.02.2022",
+    "reports.a7.ch-certs": "Certificats suisses:",
     "reports.a7.description.long": "<strong>Quel émetteur a délivré quelle quantité d’un type de certificat spécifique au cours d’une période donnée?</strong></br></br>Après sélection d’un type de certificat, ce rapport vous fournit une liste des émetteurs et le nombre de certificats délivrés pour ce type de certificat.",
     "reports.a7.description.short": "Aperçu de tous les émetteurs d’un certain type de certificat, y compris le canal d’émission pour une période donnée.",
+    "reports.a7.eu-compatible-certs": "Certificats compatibles avec l’UE",
+    "reports.a7.period-text": "Veuillez sélectionner une date de début et une date de fin de la période d’émission pour le rapport:",
+    "reports.a7.select-all-cert-types": "Alle Zertifikatstypen auswählen",
+    "reports.a7.select-cert-types": "Veuillez sélectionner le(s) type(s) de certificat pour le(s)quel(s) vous souhaitez générer le rapport:",
+    "reports.a7.selected-dataroom": "Canton/domaine sélectionné:",
     "reports.a7.title": "A7 / A10",
     "reports.a8.description.long": "<strong>Combien de certificats des différents types ont été délivrés par semaine (max. 3 derniers mois) et par quels canaux ?</strong></br></br>Ce rapport vous fournit une liste hebdomadaire des types de certificats et de leur nombre respectif par canal d’émission (une feuille de calcul par semaine). La deuxième à la xième feuille de calcul indiquent en outre le total de la différence par rapport à la semaine précédente.",
     "reports.a8.description.short": "Nombre hebdomadaire de certificats par type, ventilé par canal d’émission.",
@@ -210,6 +252,7 @@
     "reports.param-help.description": "Si vous avez des questions concernant les paramètres, ils sont tous expliqués ici.",
     "reports.param-help.download": "Télécharger l’aide",
     "reports.param-help.title": "Aide sur les paramètres",
+    "reports.reset-input": "Rétablir la saisie",
     "reports.statistic.header": "Vous souhaitez obtenir un aperçu global des certificats émis en Suisse sous forme d’une évaluation statistique ? Rédigez un rapport statistique.",
     "reports.uvci.format": "Format: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx",
     "reports.uvci.format.error": "L’UVCI doit être rédigé au format urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx.",
