--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -118,6 +118,35 @@
     "dashboard.upload.action": "Generare più certificati",
     "dashboard.upload.description": "Qui potete generare più certificati.",
     "dashboard.upload.title": "Generare più certificati",
+    "dataroom.ag": "Argovia",
+    "dataroom.ai": "Appenzello Interno",
+    "dataroom.ar": "Appenzello Esterno",
+    "dataroom.armee": "Armee",
+    "dataroom.be": "Berna",
+    "dataroom.bl": "Basilea Campagna",
+    "dataroom.bs": "Basilea Città",
+    "dataroom.bv-intern": "BV-Intern",
+    "dataroom.fr": "Friburgo",
+    "dataroom.ge": "Ginevra",
+    "dataroom.ggg": "GGG",
+    "dataroom.gl": "Glarona",
+    "dataroom.gr": "Grigioni",
+    "dataroom.ju": "Giura",
+    "dataroom.lu": "Lucerna",
+    "dataroom.ne": "Neuchâtel",
+    "dataroom.nw": "Nidvaldo",
+    "dataroom.ow": "Obvaldo",
+    "dataroom.sg": "San Gallo",
+    "dataroom.sh": "Sciaffusa",
+    "dataroom.so": "Soletta",
+    "dataroom.sz": "Svitto",
+    "dataroom.tg": "Turgovia",
+    "dataroom.ti": "Ticino",
+    "dataroom.ur": "Uri",
+    "dataroom.vd": "Vaud",
+    "dataroom.vs": "Vallese",
+    "dataroom.zg": "Zugo",
+    "dataroom.zh": "Zurigo",
     "footer.built.prefix": "Sviluppata con",
     "footer.built.suffix": "costruito",
     "footer.legal": "Nota legale",
@@ -174,7 +203,6 @@
     "reports.a12.title": "A12",
     "reports.a2.description.long": "<strong>Chi ha rilasciato il certificato in questione, quando e attraverso quale canale? Di che tipo di certificato si tratta?</strong></br></br>Dopo che è stato immesso l’UVCI, questo rapporto fornisce informazioni riguardanti l’emittente, la data e il canale di emissione nonché il tipo di certificato oggetto della ricerca. Non vengono fornite informazioni sulla persona per la quale è stato rilasciato il certificato.",
     "reports.a2.description.short": "Informazioni dettagliate (canale di emissione, emittente, data del rilascio e tipo di certificato) su uno specifico identificativo del certificato (UVCI). Non vengono fornite informazioni sulla persona per la quale è stato rilasciato il certificato.",
-    "reports.a2.reset-input": "Annulla l’immissione",
     "reports.a2.title": "A2",
     "reports.a3.description.long": "<strong>Quanti certificati di quale tipo sono stati rilasciati da uno specifico emittente in un determinato periodo di tempo e attraverso quali canali?</strong></br></br>Questo rapporto fornisce un elenco, suddiviso per emittenti, con il numero totale di tipi di certificati rilasciati e i relativi canali di emissione. ",
     "reports.a3.description.short": "Numero e tipo di tutti i certificati rilasciati da uno specifico emittente o da una specifica unità organizzativa (Unit).",
@@ -186,8 +214,22 @@
     "reports.a5.description.short": "Numero e tipo di tutti i certificati rilasciati da uno specifico emittente o da una specifica unità organizzativa (Unit).",
     "reports.a6.description.long": "<strong>Quali certificati (UVCI, tipo, data, canale) sono stati rilasciati da uno specifico emittente di un’unità in un determinato periodo di tempo?</strong></br></br>Dopo che è stata selezionata e cercata la rispettiva unità (organizzazione, emittente), questo rapporto fornisce un elenco, suddiviso per emittenti, dei certificati rilasciati, con i relativi dettagli, come tipo di certificato, canale di emissione, data del rilascio e UVCI.",
     "reports.a6.description.short": "Informazioni dettagliate su tutti i certificati rilasciati da uno specifico emittente o da una specifica unità organizzativa (Unit).",
+    "reports.a7.cert-type.a": "Certificati di guarigione anticorpi – Emissione in Svizzera: dal 16.11.2021 al 16.02.2022",
+    "reports.a7.cert-type.me": "Certificati di deroga – Emissione in Svizzera: dal 10.01.2022 al 16.02.2022",
+    "reports.a7.cert-type.r": "Certificati di guarigione (PCR) – Emissione in Svizzera: dal 07.06.2021",
+    "reports.a7.cert-type.rr": "Certificati di guarigione (RAT CH) – Emissione in Svizzera: dal 24.01.2022 al 16.02.2022",
+    "reports.a7.cert-type.rreu": "Certificati di guarigione (RAT UE) – Emissione in Svizzera: dal 02.05.2022",
+    "reports.a7.cert-type.t": "Certificati di test – Emissione in Svizzera: dal 07.06.2021",
+    "reports.a7.cert-type.v": "Certificati di vaccinazione – Emissione in Svizzera: dal 07.06.2021",
+    "reports.a7.cert-type.vt": "Certificati turistici (vaccino OMS) – Emissione in Svizzera: dal 30.11.2021 al 16.02.2022",
+    "reports.a7.ch-certs": "Certificati svizzeri:",
     "reports.a7.description.long": "<strong>Quale emittente ha rilasciato uno specifico tipo di certificato in un determinato periodo di tempo e quanti di questi certificati ha rilasciato? </strong></br></br>Dopo che è stato selezionato un tipo di certificato, questo rapporto fornisce un elenco di emittenti e il numero di certificati rilasciati del tipo in questione.",
     "reports.a7.description.short": "Panoramica di tutti gli emittenti di uno specifico tipo di certificato, compreso il canale di emissione, per un determinato periodo di tempo.",
+    "reports.a7.eu-compatible-certs": "Certificati compatibili con l’UE",
+    "reports.a7.period-text": "Selezionare una data di inizio e una data di fine del periodo di emissione per il rapporto:",
+    "reports.a7.select-all-cert-types": "Selezionare tutti i tipi di certificato",
+    "reports.a7.select-cert-types": "Selezionare il tipo o i tipi di certificato per cui si desidera generare il rapporto:",
+    "reports.a7.selected-dataroom": "Cantone/settore selezionato:",
     "reports.a7.title": "A7 / A10",
     "reports.a8.description.long": "<strong>Quanti certificati dei diversi tipi di certificato sono stati rilasciati ogni settimana (al massimo negli ultimi 3 mesi) e attraverso quali canali?</strong></br></br>Questo rapporto fornisce un elenco settimanale dei tipi di certificato rilasciati con il relativo numero per canale di emissione (un foglio di calcolo per settimana). Dal secondo all’ultimo foglio di calcolo viene inoltre mostrata la differenza totale rispetto alla settimana precedente.",
     "reports.a8.description.short": "Numero settimanale di certificati per tipo, suddivisi per canale di emissione.",
@@ -210,6 +252,7 @@
     "reports.param-help.description": "In caso di domande sui parametri, qui sono spiegati tutti.",
     "reports.param-help.download": "Scarica l’aiuto",
     "reports.param-help.title": "Aiuto sui parametri",
+    "reports.reset-input": "Annulla l’immissione",
     "reports.statistic.header": "Desidera ottenere una panoramica generale dei certificati emessi in Svizzera sotto forma di analisi statistica? Crei un rapporto statistico.",
     "reports.uvci.format": "Formato: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx",
     "reports.uvci.format.error": "L’UVCI deve essere immesso nel formato urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx.",
